electron/css/dataproofer.css
/*
  General UI
 */
 body {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: '.SFNSText-Regular', 'SF UI Text', 'Helvetica Neue', Helvetica, 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif !important;
  font-size: 16px;
  line-height: 1.4;
  color: #333;
  opacity: 1;
  background-color: #F7F6F5;
  box-sizing: border-box;
 }

 button {
  font-size: 16px;
  padding: 0.5em 1em;
  margin-top: 2px;
  border: 0;
  background-color: #CFCFCF;
  font-weight: bold;
  cursor: pointer;
  outline: none;
 }

 hr {
  margin: 48px 0;
  border: 1px dotted #CCC;
  border-bottom: transparent;
 }

.hidden {
  display: none !important;
}

.opaque {
  opacity: 0;
}

.nonopaque {
  opacity: 1;
}

.collapsed {
  display: none;
}

.fixed {
  position: fixed;
}

.pass-icon {
  color: #29A03B;
}

.icon-neutral {
  color: #858585;
}

.fail-icon {
  display: inline-block;
  color: #D43833;
}

/*** NEW CSS ***/

.window-content {
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
}

.column {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

.column-1 {
  width: 300px;
  z-index: 2;
  flex: 0 0 auto;
  background: #ffffff;
  max-height: 100vh;
  overflow-y: auto;
}

.column-1 p {
  margin-left: 1em;
  margin-right: 1em;
}

.column-1-wrapper {
  left: 0;
  top: 0;
  bottom: 0;
  max-width: 300px;
  background: #ffffff;
}

#intro-logo {
  max-width: 200px;
  display: block;
  margin: 0 auto;
}

.file-info-wrapper {
  padding-top: 24px;
  background-color: #fff;
  position: relative;
  height: 33vh;
}

.file-info {
  padding-top: 32px;
}

span.reload {
  margin-top: 0px !important;
  font-size: 14px !important;
}
button.reload {
  padding-top: 4px;
  padding-bottom: 0px;
  padding-right: 10px;
}

#info-top-bar #current-file-name{
  display: inline-block;
  font-size: 16px;
  border: 0;
  padding: 0.5em;
}

#file-size-warning {
  color: #ED4224;
}

#file-loader-button {
  display: block;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
}

.spreadsheet-input-wrapper {
  display: block;
  margin: 0 auto;
  text-align: center;
}

#spreadsheet-input {
  width: 50%;
  display: inline-block;
  height: auto;
  font-size: 10px;
  outline: none;
  background-color: #F3F1ED;
  padding: 1.2em 0.5em;
}

#spreadsheet-input:active, #spreadsheet-input:focus {
  background-color: white;
}

#spreadsheet-input::-webkit-input-placeholder {
  text-align: center;
}

#spreadsheet-button {
  display: inline-block;
  width: 35%;
}

#file-loader-button,
#spreadsheet-button {
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  text-align: center;
  margin-top: 5px;
  background-color: #48C2C5;
  color: white;
  border: 0;
  padding: 1em 0.5em;
}

.column-2 {
  flex: 1 1 auto;
}

#grid {
  flex: 1 1 auto;
  height: 90vh;
  overflow-y: auto;
}

.grid-footer {
  z-index: 3;
  background-color: #ECEBE9;
  padding: 1em;
  flex: 0 0 auto;
}

.column-3 {
  width: 200px;
  z-index: 2;
  background: #ffffff;
  flex: 0 0 auto;
}

.overview-title {
  text-align: center;
  min-height: 3vh;
  box-shadow: 1px 5px 5px -5px #333;
}

#fingerprint {
  height: 97vh;
  overflow-y: scroll;
}

/*** OLD CSS ***/

/* =============================================================================
Navigation buttons
============================================================================= */
#nav-buttons {
  float: right;
  margin-right: 2em;
}

#nav-buttons button {
  display: inline-block;
  font-size: 16px;
  border: 0;
  padding: 0.5em;
  margin-bottom: 2px;
  margin-right: 2px;
  color: white;
}

#back-button {
  background-color: #48C2C5;
}

#forward-button {
  background-color: #4A66B0;

}

/* =============================================================================
Grid
============================================================================= */

.filtered-cells table td {
  /*
  border-right: 1px solid #48C2C5;
  border-bottom: 1px solid #48C2C5;
  */
  font-weight: bold;
  color: black !important;
}

.changed {
  background: pink;
}

.info {
  line-height: 1.3;
  text-align: center;
  color: #858585;
  padding: 0.8em;
}

.summary-results {
  padding: 4px;
  margin: 8px;
  /*border-bottom: 1px solid #ADADAD;*/
  color: #454544;
}

.summary-results {
  font-weight: bold;
  text-align: center;
}

.column-header {
  /*color: #2B3992;*/
  color: black;
  font-size: 18px;
  line-height: 1em;
  font-weight: bold;
  margin: 5px 0;
  opacity: 1;
  /*text-align: center;*/
}
/*
.column-header::after {
  content: " column";
  font-weight: normal;
}
*/

.test {
  position: relative;
  margin: 3px;
}
.test .summary {
  font-size: 10px;
  line-height: 1.2em;
  opacity: 0.8;
}
.test .summary.interesting {
  font-size: 14px;
  /*font-weight: bold;*/
  opacity: 1;
}
.test.filtered .summary {
  color: black;
  font-weight: bold;
}

.info-btn {
  cursor: pointer;
  pointer-events: none;
  float: right;
  margin-right: 0;
  position: absolute;
  right: 16px;
  top: 4px;
}

.test .summary {
  cursor: pointer;
}

.filter-btn {
  cursor: pointer;
  opacity: 0.25;
  font-size: 12px;
  color: #58595B;
  width: 100%;
}

.filter-btn:hover {
  opacity: 1;
}

.info-wrapper div {
  font-size: 12px;
  margin: 10px 25px;
}

.test.active .description {
  display: block;
}
.test.active .conclusion {
  display: block;
}
.test.active .visualization {
  display: block;
}

/* =============================================================================
General Suites and test
============================================================================= */
.suite {
  /*border-top: 2px solid #CCC;*/
  margin: 8px 0;
}

#local-tests .test {
  border: 1px solid #4A4A4A;
}

.suite-hed * {
  /*display: inline-block;
  text-decoration: underline;*/
}

.suite-hed h2 {
  margin: 0;
}

.suite .test.active {
  /*border: 1px solid black;*/
  opacity: 1;
}

.suite .test {
  margin: 4px;
  padding: 0.8em;
  margin-top: 1em;
  /*min-width: 110px;*/
  /*min-height: 190px;*/
  /*max-height: 400px;*/
  /*overflow-y: auto;*/
  display: inline-block;
  vertical-align: top;
  background-color: white;
  border: 1px solid transparent;
  border-radius: 3px;
  opacity: 0.2;
  position: relative;
  padding-bottom: 42px;
}

.suite .test button {
  width: 100%;
}
.suite .test .edit-test {
  font-size: 12px;
  color: #58595B;
  position: absolute;
  bottom: 0px;
  left: 0px;
  opacity: 0.25;
}

.suite .test .edit-test:hover {
  opacity: 1;
}

.suite .test .delete-test {
  position: absolute;
  font-weight: normal;
  top: 0;
  right: 0;
  font-size: 12px;
  height: 14px;
  width: 14px;
  padding: 0;
  margin: 0;
  /*background-color: #EC4324;*/
  background-color: transparent;
  color: #21267F;
}

/*
.suite .test .delete-test::before {
  content: "X ";
}
*/

.suite .test canvas {
  width: 100%;
}


/*
.suite .test:nth-child(odd) {
  background-color: #efefef;
}
*/
.test .passfail {
  float: left;
  margin-right: 0.6em;
}
.test .passfail div{
  width: 12px;
  height: 12px;
  border-radius: 50%;
  float:left;
  margin-top: -2px;
  margin-right: 6px;
  /*margin-top: 7px;*/
}

.suite .test .message {
  font-size: 14px;
  /*float:left;*/
  /*width: calc(100% - 245px);*/
}

.suite .test .test-header {
  color: #21267F;
  font-size: 14px;
  font-weight: bold;
  margin: 0.5em 0;
  margin-top: 0.8em;
  line-height: 1.2em;

}
.suite .test .test-column {
  font-size: 12px;
  font-weight: bold;
  font-style: italic;
}

.suite .test .fingerprint {
  /*width: 200px;*/
  /*float: right;*/
  /*margin-right: 25px;*/
  cursor: pointer;
}

/* =============================================================================
FINGERPRINT
============================================================================= */

#fingerprint {
  cursor: pointer;
}


/* =============================================================================
Left Column (1)
============================================================================= */

.file-info p {
  text-align: center;
}

.file-info hr {
  margin: 4px 0;
}

#dataproofer-intro-description {
  max-width: 420px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 1em;
  padding: 1em;
  text-align: left;
}

#file-loader {
  width: 0.1px;
  height: 0.1px;
  opacity: 0;
  overflow: hidden;
  position: absolute;
  z-index: -1;
}

.title {
  font-size: 2em;
  text-align: center;
}

#gsheets-response {
  width: 80%;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  font-size: 20px;
  color: #a23
}

/* =============================================================================
Middle Column (2)
============================================================================= */

.title {
  font-size: 2em;
  text-align: center;
}

.suite.active {
  opacity: 1;
}

.suite-btn {
  margin-top: 5px;
  float: left;
  cursor: pointer;
}

.suite:not(.active) .suite-hed-title,
.suite:not(.active) .test {
  opacity: 0.2;
}

.suite:not(.active) label {
  opacity: 1;
}

.suite:not(.active) .onoff {
  pointer-events: none;
}

button.run-tests {
  /*
  font-size: 1.8em;
  padding: 1em;
  width: 100%;
  display: block;
  text-align: center;
  */
  display: block;
  text-align: center;
  /*background-color: #ED4224;*/
  background-color: #4A66B0;
  border: 0;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 48px;
  color: white;
  font-size: 24px;
  padding: 1em;
}

#top-run-tests {
  margin-top: 100px;
  margin-bottom: 100px;
}

.test-editor {
  position: fixed;
  /*top: 87px;*/
  top: 0;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background-color: rgba(255, 255, 255, 0.95);
  padding-top: 24px;
}
.test-editor h3 {
  margin: 8px;
  margin-left: 0.8em;
}
.test-editor input {
  margin: 0.8em;
  margin-left: 0.5em;
  border: none;
  border-bottom: 2px solid white;
  outline: none;
  width: 100%;
  background-color: #F1F2F2;
  padding: 12px;
}
#test-editor-name {
  font-size: 20px;
  font-weight: bold;
  margin-bottom: 0;
}
#test-editor-description {
  font-size: 14px;
}
.test-editor input:focus {
  border-bottom: 2px solid #333;
}
#test-editor-js {
  display: block;
  width: 100%;
  height: calc(100% - 210px);
}
.CodeMirror {
  width: 100%;
  height: 100%;
}

.cm-s-mdn-like .CodeMirror-gutters {
    background: #f8f8f8;
    border-left: 6px solid white;
    color: #333;
}

.test-editor button {
  display: inline-block;
  /*
  float: left;
  font-size: 16px;
  border: 0;
  padding: 0.5em;
  margin-bottom: 2px;
  margin-right: 2px;
  margin-left: 20px;
  margin-top: 10px;
  outline: none;
  */
}
/*
.test-editor button:hover {
  box-shadow: 3px 3px 6px #999;
}
*/
#cancel-test {
  background-color: #ccc;
}
#save-test {
  display: inline-block;
  background-color: #ED4224;
  color: white;
}
#copy-test {
  background-color: #7fc;
}

/* =============================================================================
Right Column (3)
============================================================================= */

.title {
  font-size: 2em;
  text-align: center;
}

.test {
  line-height: 1.2em;
  /*width: 88%;*/
  width: 80%;
  display: block;
  margin-left: auto;
  margin-right: auto;
  min-height: 1em;
  padding: 4px 1em;
}

.handsontable td:hover {
  background-color: aliceblue;
}

/* =============================================================================
HEADER
Header styles stolen from photon.css
============================================================================= */
.toolbar-header {
  z-index: 100;
  border-bottom: 1px solid #c2c0c2;
  background-color: #222;
  color: #fff;
  margin: 0;
  padding: 2px;
}
.toolbar-header .title {
  margin-top: 1px;
}

.toolbar-footer {
  border-top: 1px solid #c2c0c2;
  -webkit-app-region: drag;
}

.toolbar-header .title {
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  text-align: center;
  cursor: default;
}

.toolbar-borderless {
  border-top: 0;
  border-bottom: 0;
}

